--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,58 @@
 /*
 This file is an external stylesheet named style.css
  */
+body {
+    background-color: aliceblue;
+    background-image: url("../img/mountain.jpeg");
+    background-size: 500px 500px;
+    font-family: Tahoma, serif;
+}
 
-.fancy-header {
-    color: purple;
+h1.fancy-header{
+    text-align: center;
+    color:purple;
     text-decoration: underline;
+}
+
+h2 {
+    color:green;
+    text-decoration: underline;
+}
+
+ol {
+    list-style: upper-roman;
+}
+
+ul {
+    list-style: square;
+}
+
+table {
+    table-layout: fixed;
+    width: 500px;
+}
+
+th {
+    padding-bottom: 10px;
+    color: blue;
+}
+
+td {
+    padding-left: 60px;
+}
+
+a:link {
+    color: blue;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    color: red;
+}
+
+a:active {
+    color: green;
 }
