--- a/css/streaming-player-ui.css
+++ b/css/streaming-player-ui.css
@@ -77,6 +77,8 @@ header a:hover {
 .header-background {
     background: purple;
     /* TODO: define the grid area of this element to take up the entire first row of the .container grid  */
+    grid-row: 1/2;
+    grid-column: 1/6;
 }
 
 nav ul {
